# taxes

./: .gitignore  LICENSE  README.md  Setup.hs  htaxes.cabal  taxes.cabal
src/: .gitignore  Form1040NREZ.hs  Forms.hi  Forms.hs  IntervalTree.hs  Main.hi  Main.hs  Prompts.hi  Prompts.hs  Tables.hi  Tables.hs  TaxesCmd  TaxesCmd.hi  TaxesCmd.hs  USFederalNREZ.hs  W2.hs  test_big.txt  test_med7.txt  test_med8.txt  test_med9.txt  test_small.txt
src/tables/: table1040NR-EZ.txt
test/: test-all.hs
