name:                htaxes

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

synopsis:            A simple tax helper
description:         Tax software supporting forms US 1040NR-EZ and OR 40
homepage:            http://foo.bar
license:             BSD3
license-file:        LICENSE
author:              Peter Penzin
maintainer:          peter@foo.bar
-- copyright:           
category:            Tax
build-type:          Simple
cabal-version:       >=1.8
data-files:          resources/tables/table1040NR-EZ.txt

Executable htaxes
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Tables Forms Prompts Paths_htaxes
  build-depends:       base
  
Test-suite test-all
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test-all.hs
  build-depends:       base, quickcheck
